--- a/data-analyst.html
+++ b/data-analyst.html
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -155,7 +155,7 @@
 <p><span class="badge badge-light">United States San Francisco</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/esolutionsinc/jobs/1935373'>Job Application for Data Analyst  at eSolutions, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/esolutionsinc/jobs/1935373'>Job Application for Data Analyst  at eSolutions, Inc.</a></h5> 
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -163,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UmdaschGroup/743999698464210-senior-data-analyst-m-w-d-'>Umdasch Group Senior Data Analyst (m/w/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/UmdaschGroup/743999698464210-senior-data-analyst-m-w-d-'>Umdasch Group Senior Data Analyst (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -175,11 +175,11 @@
 <p><span class="badge badge-light">Guildford  Guildford</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -191,7 +191,7 @@
 <p><span class="badge badge-light">Oklahoma City United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.rgp.com/ShowJob/Id/139135/Data%20Analyst'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.rgp.com/ShowJob/Id/139135/Data%20Analyst'>
 	RGP Careers | Data Analyst
 </a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
@@ -239,7 +239,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -399,11 +399,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://corecam.join.com/jobs/462646-junior-data-analyst'>Job @ Corecam (Singapore): Junior Data Analyst | JOIN</a></h5> 
+<h5><a href='https://corecam.join.com/jobs/462646-junior-data-analyst'>Job @ Corecam (Singapore): Junior Data Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore, Singapore  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -472,7 +472,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oB3ibfwR&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nhwAlMwZ&jvi=oB3ibfwR,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oB3ibfwR&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nhwAlMwZ&jvi=oB3ibfwR,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
